fix warnings and support dark mode

--- a/web-app/app/globals.css
+++ b/web-app/app/globals.css
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+html {
+  color-scheme: light dark;
+}
+
 html,
 body {
   max-width: 100vw;
